tests/snapshots/run_wpt_conformance__onnx_reduceMax_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_max.https.any.js",
    "reduceMax float16 1D constant tensor default options",
    "onnx",
    "PASS",
)
